solved setDate and added show/hide automatically

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 &lt;script&gt;
   //reset type=date inputs to text
   $( document ).bind( &quot;mobileinit&quot;, function(){
-    $.mobile.page.prototype.options.degradeInputs.date = true;
+    $.mobile.page.prototype.options.degradeInputs.date = "text";
   });	
 &lt;/script&gt;	
 </code></pre>
